@@ -1,6 +1,7 @@
 == 2.8.4 ==
 Release date: 
 * Enhancement: Info Grid & Carousel - Added Icon Position option
+* Enhancement: Info Table - Added Icon Position option
 
 == 2.8.3 ==
 Release date: December 24, 2024
